# slirp4netns

./: .clang-format  .gitattributes  .gitignore  .travis.yml  Dockerfile.artifact  Dockerfile.buildtests  Dockerfile.tests  LICENSE  MAINTAINERS  Makefile  Makefile.am  README.md  SECURITY_CONTACTS  Vagrantfile  api.c  api.h  autogen.sh  configure.ac  main.c  make.sh  sandbox.c  sandbox.h  seccomparch.h  seccompfilter.c  seccompfilter.h  seccompfilter_rules.h  slirp.c  slirp4netns.1  slirp4netns.1.md  slirp4netns.c  slirp4netns.h  vendor.md  vendor.sh  version.sh
.github/workflows/: main.yaml  release.yaml
Dockerfile.artifact.d/meson-cross/: aarch64-linux-gnu  arm-linux-gnueabihf  powerpc64le-linux-gnu  riscv64-linux-gnu  s390x-linux-gnu  x86_64-linux-gnu
benchmarks/: benchmark-iperf3-reverse.sh  benchmark-iperf3.sh
hack/: indent.sh  release.sh
parson/: README.md
qemu/: README.md
qemu/include/qemu/: queue.h
qemu/slirp/: arp_table.c  bootp.c  cksum.c  dhcpv6.c  if.c  if.h  ip6.h  ip6_icmp.c  ip6_input.c  ip6_output.c  ip_icmp.c  ip_input.c  libslirp.h  mbuf.c  misc.c  ndp_table.c  sbuf.c  slirp.c  slirp.h  socket.c  socket.h  tcp.h  tcp_input.c  tcp_subr.c  udp.c  udp6.c
qemu/slirp/src/: dhcpv6.c  if.h  ip6_icmp.c  ip6_input.c  ip_icmp.c  ip_output.c  libslirp.h  mbuf.c  slirp.c  slirp.h  socket.c  socket.h  tcp.h  tcp_input.c  tcp_subr.c
qemu_patches/: 0001-slirp-add-slirp_initx-SlirpConfig-SlirpCb-void.patch  0002-slirp-allow-custom-MTU.patch  0003-slirp-add-disable_host_loopback-prohibit-connections.patch  README.md  sync.sh
rd235_libslirp/: README.md
rd235_libslirp/include/qemu/: osdep.h
rd235_libslirp/src/: qemu2libslirp-bool.h  qemu2libslirp.h
tests/: common.sh  slirp4netns-no-unmount.sh  test-slirp4netns-api-socket.sh  test-slirp4netns-cidr.sh  test-slirp4netns-cidr6.sh  test-slirp4netns-configure.sh  test-slirp4netns-dhcp.sh  test-slirp4netns-disable-dns.sh  test-slirp4netns-disable-host-loopback.sh  test-slirp4netns-exit-fd.sh  test-slirp4netns-hostfwd.sh  test-slirp4netns-hostfwd4.sh  test-slirp4netns-hostfwd6.sh  test-slirp4netns-ipv6.sh  test-slirp4netns-macaddress.sh  test-slirp4netns-no-host-loopback.sh  test-slirp4netns-nspath.sh  test-slirp4netns-outbound-addr.sh  test-slirp4netns-ready-fd.sh  test-slirp4netns-sandbox-no-unmount.sh  test-slirp4netns-sandbox.sh  test-slirp4netns-seccomp.sh  test-slirp4netns.sh
vendor_patches/libslirp/: 0001-add-slirp_initx-SlirpConfig-SlirpCb-void.patch  0002-allow-custom-MTU.patch  0003-add-disable_host_loopback-prohibit-connections-to-12.patch
